fixed but: menu items not vertically aligned on safari

--- a/src/documents/styles/style.css.scss
+++ b/src/documents/styles/style.css.scss
@@ -128,6 +128,9 @@ a {
 }
 
 .menu {
+	@include flexbox;
+	@include align-items(center);
+	@include justify-content(center);
 	position: absolute;
 	top: 100vh;
 	width: 100%;
